--- a/app/src/main/res/layout/content_anomalies.xml
+++ b/app/src/main/res/layout/content_anomalies.xml
@@ -5,15 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/scroller"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="nos.elfak.rs.sensewatcher.ResultsActivity"
-    tools:showIn="@layout/activity_results">
+    tools:context="nos.elfak.rs.sensewatcher.AnomaliesActivity"
+    tools:showIn="@layout/activity_anomalies">
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/table"
-        ></TableLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:text="@string/large_text"/>
 
 </android.support.v4.widget.NestedScrollView>
