--- a/app/src/main/res/layout/info_row.xml
+++ b/app/src/main/res/layout/info_row.xml
@@ -41,13 +41,20 @@
         android:id="@+id/sens_z"
         android:text="Z"
         />
-
     <TextView
         android:layout_width="0px"
         android:layout_height="wrap_content"
         android:layout_weight="3"
         android:id="@+id/sens_ts"
         android:text="Time stamp"
+        />
+    <TextView
+        android:layout_width="0px"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:id="@+id/sens_desc"
+        android:text="Description"
+        android:visibility="gone"
         />
 
 </TableRow>
