--- a/app/src/main/res/layout/content_request_anomalies.xml
+++ b/app/src/main/res/layout/content_request_anomalies.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/scroller"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="nos.elfak.rs.sensewatcher.RequestAnomalies"
     tools:showIn="@layout/activity_request_anomalies">
